# Lyve-Cloud-Solutions-Samples

./: .gitignore  .whitesource  CONTRIBUTING.md  README.md  SECURITY.md  whitesource.config  working-with-git.md
hackathon-submissions/s3-data-migration-cstor/webapp/: pyproject.toml
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/dashboard/cloud/: admin.py  permissions.py  task_handlers.py  urls.py  views.py
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/dashboard/cloud/migrations/: 0001_initial.py  0002_cloudprovider_cloud_access_key_and_more.py  0005_bucket_is_valid.py  0008_alter_migration_dest_prefix_and_more.py
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/dashboard/dashboard/: asgi.py  middleware.py  settings.py
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/frontend/: package-lock.json
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/frontend/src/: main.js
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/frontend/src/router/: index.js
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/frontend/src/services/: wsservice.js
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/frontend/src/store/: index.js
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/frontend/src/views/dashboard/: Connection.vue  ConnectionCreate.vue  Profile.vue
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/frontend/src/views/dashboard/Bucket/: Edit.vue  List.vue
hackathon-submissions/s3-data-migration-cstor/webapp/src/cstor/frontend/src/views/dashboard/Migration/: Create.vue  (+1 more)
integration-template/core/: README.rst  docker-compose.yml  pyproject.toml
integration-template/core/src/cstor/s3/: _version.py  stub.py
integration-template/core/src/cstor/s3/core/: aws.py
integration-template/core/tests/: test_aws.py  test_dramatiq.py  test_secrets.py
(+441 files in other folders)
