[tool.poetry]
name = "cstor-s3"
version = "0.4.4"
description = ""
authors = ["olwee <hello@codewitholi.com>"]
packages = [
  { include = "cstor", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.22.5"
pydantic = "^1.9.0"
pytest-mock = "^3.7.0"
dramatiq = {extras = ["redis", "watch"], version = "^1.13.0"}
httpx = "^0.22.0"
python-rocksdb = "^0.7.0"
redis = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.3.2"
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
fail-under = "10"
output-format = "parseable"
msg-template = "{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}"

[tool.pylint.MESSAGES_CONTROL]
disable = "R0801"
